--- a/node/snoozle-backend/package.json
+++ b/node/snoozle-backend/package.json
@@ -9,6 +9,9 @@
   "author": "Jan Kolkmeier",
   "license": "MIT",
   "dependencies": {
+    "engine.io": "^2.0.2",
+    "express": "^4.14.1",
+    "open": "0.0.5",
     "serialport": "^4.0.7",
     "stomp-client": "^0.8.1",
     "xbee-api": "^0.5.2"
