--- a/node/snoozle-backend/package.json
+++ b/node/snoozle-backend/package.json
@@ -9,7 +9,8 @@
   "author": "Jan Kolkmeier",
   "license": "MIT",
   "dependencies": {
-    "engine.io": "^2.0.2",
+    "engine.io": "3.1.1",
+    "engine.io-client": "3.1.1",
     "express": "^4.14.1",
     "open": "0.0.5",
     "serialport": "^4.0.7",
