we now have a fully working example of snoozle responding to sensordata... yay :)

--- a/java/SnoozleStarters/resource/flipper.properties
+++ b/java/SnoozleStarters/resource/flipper.properties
@@ -1,6 +1,6 @@
 name: SnoozleFlipper
 jslibs: jslibs/underscore-min.js
-templates: FlipperTemplates/test.xml
+templates: FlipperTemplates/processSensorData.xml, FlipperTemplates/behaviour.xml
 evalFrequency: 1
 maxSteps: 0
 stopIfUnchanged: False
