--- a/java/SnoozleStarters/resource/flipper.properties
+++ b/java/SnoozleStarters/resource/flipper.properties
@@ -1,7 +1,7 @@
 name: SnoozleFlipper
 jslibs: jslibs/underscore-min.js
-templates: FlipperTemplates/processSensorData.xml, FlipperTemplates/behaviour.xml
-evalFrequency: 1
+templates: FlipperTemplates/init.xml, FlipperTemplates/processSensorData.xml, FlipperTemplates/behaviour.xml
+evalFrequency: 4
 maxSteps: 0
 stopIfUnchanged: False
 autoReloadTemplates: ONLY_CHANGED
