--- a/node/snoozle-backend/package.json
+++ b/node/snoozle-backend/package.json
@@ -9,11 +9,11 @@
   "author": "Jan Kolkmeier",
   "license": "MIT",
   "dependencies": {
-    "engine.io": "3.1.1",
+    "engine.io": "^3.1.1",
     "engine.io-client": "3.1.1",
     "express": "^4.14.1",
     "open": "0.0.5",
-    "serialport": "^4.0.7",
+    "serialport": "^7.1.3",
     "stomp-client": "^0.8.1",
     "xbee-api": "^0.5.2"
   }
